--- a/index.html
+++ b/index.html
@@ -7,34 +7,34 @@
     <title>Effective Solutions for Your Business</title>
     <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
     <link rel="stylesheet" href="css/styles.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
 
 </head>
 
 <body>
     <header>
         <nav>
-            <a href="./index.html"
-                style="text-decoration: none; color: inherit; font-weight: bold; font-size: 24px;">WEBSTUDIO</a>
+            <a href="./index.html" class="logo">WEB<span class="logo-section">STUDIO</span></a>
 
             <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+                <li><a href="" class="nav-link">Studio</a></li>
+                <li><a href="" class="nav-link">Portfolio</a></li>
+                <li><a href="" class="nav-link">Contacts</a></li>
             </ul>
         </nav>
-        <address>
+        <address class="contact-address">
             <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111" class="contact-link">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
     <main>
         <section class="header-section">
-            <h1>Effective Solutions
+            <h1 class="header-title">Effective Solutions
                 for Your Business</h1>
-            <button type="button">Order Service</button>
+            <button type="button" class="header-button">Order Service</button>
         </section>
         <section class="industries-section">
             <ul>
@@ -86,7 +86,7 @@
                 </li>
             </ul>
         </section>
-        <class="portfolio-section">
+        <section class="portfolio-section">
             <h2>Our Portfolio</h2>
             <div class="portfolio-section-part-one">
                 <ul>
@@ -129,11 +129,10 @@
                     </li>
                 </ul>
             </div>
-            </section>
+        </section>
     </main>
     <footer>
-        <a href="./index.html"
-            style="text-decoration: none; color: inherit; font-weight: bold; font-size: 24px;">WebStudio</a>
+        <a href="./index.html" class="logo">WEB<span class="logo-section">STUDIO</span></a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
     </footer>
