--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html" class="logo">WEB<span class="logo-section">STUDIO</span></a>
+            <a href="./index.html" class="logo">Web<span class="logo-header">Studio</span></a>
 
             <ul>
                 <li><a href="" class="nav-link">Studio</a></li>
@@ -132,7 +132,7 @@
         </section>
     </main>
     <footer>
-        <a href="./index.html" class="logo">WEB<span class="logo-section">STUDIO</span></a>
+        <a href="./index.html" class="logo">Web<span class="logo-footer">Studio</span></a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
     </footer>
