--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="css/styles.css" />
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.gstatic.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
+
 
 </head>
 
@@ -65,22 +68,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./images/img.jpg" width="264" height="260" alt="Mark Guerrero">
+                    <img src="./images/img.jpg" alt="Mark Guerrero">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/img-2.jpg" width="264" height="260" alt="Tom Ford">
+                    <img src="./images/img-2.jpg" alt="Tom Ford">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/img-3.jpg" width="264" height="260" alt="Camila Garcia">
+                    <img src="./images/img-3.jpg" alt="Camila Garcia">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/img-4.jpg" width="264" height="260" alt="Daniel Wilson">
+                    <img src="./images/img-4.jpg" alt="Daniel Wilson">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
@@ -88,47 +91,41 @@
         </section>
         <section class="portfolio-section">
             <h2>Our Portfolio</h2>
-            <div class="portfolio-section-part-one">
-                <ul>
-                    <li>
-                        <img src="./images/img-5.jpg" width="264" height="260"
-                            alt="Set of user interface designs for a mobile banking application">
-                        <h3>Banking App</h3>
-                        <p>App</p>
-                    </li>
-                    <li>
-                        <img src="./images/img-6.jpg" width="360" height="300"
-                            alt="Person using a smartphone to scan a QR code displayed on a point-of-sale (POS) terminal">
-                        <h3>Cashless Payment</h3>
-                        <p>Marketing</p>
-                    </li>
-                    <li>
-                        <img src="./images/img-7.jpg" width="360" height="300"
-                            alt="A laptop and smartphone displaying a colorful gradient background with the text 'Return to Normalcy' on the laptop screen and 'Life in the Future' on the smartphone screen. The design features a modern and sleek aesthetic, emphasizing a message of moving forward and adapting to future trends.">
-                        <h3>Meditation App</h3>
-                        <p>App</p>
-                    </li>
-                </ul>
-            </div>
-            <div class="portfolio-section-part-two">
-                <ul>
-                    <li>
-                        <img src="./images/img-8.jpg" width="360" height="300" alt="">
-                        <h3>Taxi Service</h3>
-                        <p>Marketing</p>
-                    </li>
-                    <li>
-                        <img src="./images/img-9.jpg" width="360" height="300" alt="">
-                        <h3>Screen Illustrations</h3>
-                        <p>Design</p>
-                    </li>
-                    <li>
-                        <img src="./images/img-10.jpg" width="360" height="300" alt="">
-                        <h3>Online Courses</h3>
-                        <p>Marketing</p>
-                    </li>
-                </ul>
-            </div>
+            <ul>
+                <li>
+                    <img src="./images/img-5.jpg" alt="Set of user interface designs for a mobile banking application">
+                    <h3>Banking App</h3>
+                    <p>App</p>
+                </li>
+                <li>
+                    <img src="./images/img-6.jpg"
+                        alt="Person using a smartphone to scan a QR code displayed on a point-of-sale (POS) terminal">
+                    <h3>Cashless Payment</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/img-7.jpg"
+                        alt="A laptop and smartphone displaying a colorful gradient background with the text 'Return to Normalcy' on the laptop screen and 'Life in the Future' on the smartphone screen. The design features a modern and sleek aesthetic, emphasizing a message of moving forward and adapting to future trends.">
+                    <h3>Meditation App</h3>
+                    <p>App</p>
+                </li>
+                <li>
+                    <img src="./images/img-8.jpg" alt="">
+                    <h3>Taxi Service</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/img-9.jpg" alt="">
+                    <h3>Screen Illustrations</h3>
+                    <p>Design</p>
+                </li>
+                <li>
+                    <img src="./images/img-10.jpg" alt="">
+                    <h3>Online Courses</h3>
+                    <p>Marketing</p>
+                </li>
+            </ul>
+            </>
         </section>
     </main>
     <footer>
