--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
     <header>
         <nav>
             <a href="./index.html" class="logo">Web<span class="logo-header">Studio</span></a>
-
             <ul>
-                <li><a href="" class="nav-link">Studio</a></li>
-                <li><a href="" class="nav-link">Portfolio</a></li>
-                <li><a href="" class="nav-link">Contacts</a></li>
+                <li><a href="./studio.html" class="nav-link">Studio</a></li>
+                <li><a href="./portfolio.html" class="nav-link">Portfolio</a></li>
+                <li><a href="./contacts.html" class="nav-link">Contacts</a></li>
             </ul>
         </nav>
         <address class="contact-address">
@@ -40,32 +39,33 @@
             <button type="button" class="header-button">Order Service</button>
         </section>
         <section class="industries-section">
+            <h2>industries</h2>
             <ul>
                 <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business
+                    <h3 class="industries-title">Strategy</h3>
+                    <p class="industries-text">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                    <h3 class="industries-title">Punctuality</h3>
+                    <p class="industries-text">Bring the key message to the brand's audience for the best price within the shortest possible
                         time.</p>
                 </li>
                 <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                    <h3 class="industries-title">Diligence</h3>
+                    <p class="industries-text">Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.
                     </p>
                 </li>
                 <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                    <h3 class="industries-title">Technologies</h3>
+                    <p class="industries-text">Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
                 </li>
             </ul>
         </section>
         <section class="team-section">
-            <h2>Our Team</h2>
+            <h2 class="team-title">Our Team</h2>
             <ul>
                 <li>
                     <img src="./images/img.jpg" alt="Mark Guerrero">
